--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,35 +1,39 @@
-name: Laravel
+
+name: 🚀 Apis on push
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Change to the branch you want to deploy from
 
 jobs:
-  laravel-tests:
-
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2
+
+    - name: 📂 Print current directory
+      run: pwd  # This prints the current working directory
+
+    - name: 📂 Deploy files via FTP
+      uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+        server: "ftp.marcalinvestment.com"  # Your FTP server
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: "./"  # Adjust to point to your project's public directory
+        server-dir: "/"  # Change to your appropriate server path
+        include: |  # Use include to specify files and directories to deploy
+          node_modules/
+          vendor/
+          storage/
+          tests/
+          *.md
+          .env
+          lost+found/
+
+    - name: 🚀 Post-Deployment
+      run: echo "Deployment complete!"
